# Sorcer

./: .cursorignore  .gitignore  ALL_FIXES_COMPLETE.md  BUGS_FIXED.md  CONTEXT.md  CONTEXTGRID.md  DEMO_SCRIPT.md  FIXES_APPLIED.md  README.md  SERVER_MODEL_MAP.md  SETUP_GUIDE.md  STARTUP.md  TEST_DEMO_FLOW.md  WINDSURF_CACHE_VIZ_AND_ANIMATIONS.md  WINDSURF_CHAT_REDESIGN.md  WINDSURF_FRONTEND_PROMPT.md  WINDSURF_INTEGRATION_PROMPT.md  WINDSURF_PROMPT.md  do-app-spec.yaml
backend/eco_orchestrator/: .gitignore  ENDPOINTS_REFERENCE.md  SETUP.md  TEST_WORKFLOW.md  VERTEX_SETUP.md  endpoints.md  pyproject.toml  requirements.txt  server_model_map.json
backend/eco_orchestrator/app/: dependencies.py  main.py  worker.py
backend/eco_orchestrator/app/routers/: __init__.py  action.py  agent.py  discovery.py  governance.py  grid.py  intelligence.py  ledger.py  orchestrate.py  test.py  transparency.py
backend/eco_orchestrator/app/schemas/: __init__.py  actions.py  analytics.py
backend/eco_orchestrator/core/: __init__.py  cache.py  classifier.py  compression.py  database.py  energy_providers.py  grid_engine.py  llm_client.py  logger.py  orchestrator.py  pii_scrubber.py  receipt_store.py  redis.py  test_cache.py
backend/eco_orchestrator/data/: wackFormula.txt  watttime_test_results.json
backend/eco_orchestrator/graph/: __init__.py  builder.py  nodes.py  state.py
backend/eco_orchestrator/scripts/: seed_cache.py  seed_db.py  test_deferral_and_flow.py  test_flow.py
sorcer-app/: .env.example  context.md  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  readthis.md  (+3 more)
(+92 files in other folders)
